# cloudcart-sentinel

cloudcart-sentinel/: CONTRIBUTING.md  Dockerfile  GITHUB_SETUP.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
cloudcart-sentinel/alembic/: env.py
cloudcart-sentinel/alembic/versions/: 0001_initial.py
cloudcart-sentinel/app/: main.py  schemas.py  seed.py
cloudcart-sentinel/app/api/: deps.py  routes.py
cloudcart-sentinel/app/core/: config.py  logging.py  metrics.py  security.py
cloudcart-sentinel/app/db/: base.py  models.py  session.py
cloudcart-sentinel/app/repositories/: services.py
cloudcart-sentinel/app/services/: probes.py  slo.py
cloudcart-sentinel/docs/: ARCHITECTURE.md  PRODUCT.md
cloudcart-sentinel/docs/adr/: 0001-modular-monolith.md
cloudcart-sentinel/docs/runbooks/: service-down.md
cloudcart-sentinel/infra/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
cloudcart-sentinel/observability/: prometheus.yml
cloudcart-sentinel/tests/: conftest.py  test_probe.py  test_security.py  test_slo.py
