[project]
name = "cloudcart-sentinel"
version = "1.0.0"
description = "Production-style e-commerce reliability control plane"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "asyncpg>=0.30,<1",
  "alembic>=1.14,<2",
  "redis>=5.2,<6",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.7,<3",
  "python-jose[cryptography]>=3.3,<4",
  "passlib[bcrypt]>=1.7,<2",
  "prometheus-client>=0.21,<1",
  "structlog>=24.4,<26",
  "dnspython>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
  "mypy>=1.14,<2",
  "types-python-jose>=3.3.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers --cov=app --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ASYNC", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
